--- a/trove/templates/redis/3.2/config.template
+++ b/trove/templates/redis/3.2/config.template
@@ -31,6 +31,7 @@
 # include /path/to/other.conf
 
 ################################## NETWORK #####################################
+
 # By default Redis listens for connections from all the network interfaces
 # available on the server. It is possible to listen to just one or multiple
 # interfaces using the "bind" configuration directive, followed by one or
@@ -40,19 +41,6 @@
 #
 # bind 192.168.1.100 10.0.0.1
 # bind 127.0.0.1
-#	
-# ~~~ WARNING ~~~ If the computer running Redis is directly exposed to the	
-# internet, binding to all the interfaces is dangerous and will expose the	
-# instance to everybody on the internet. So by default we uncomment the	
-# following bind directive, that will force Redis to listen only into	
-# the IPv4 lookback interface address (this means Redis will be able to	
-# accept connections only from clients running into the same computer it	
-# is running).	
-#	
-# IF YOU ARE SURE YOU WANT YOUR INSTANCE TO LISTEN TO ALL THE INTERFACES	
-# JUST COMMENT THE FOLLOWING LINE.	
-# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~	
-#bind 127.0.0.1	
 
 # Protected mode is a layer of security protection, in order to avoid that
 # Redis instances left open on the internet are accessed and exploited.
@@ -87,7 +75,7 @@ port 6379
 tcp-backlog 511
 
 # Unix socket.
-#
+# 
 # Specify the path for the Unix socket that will be used to listen for
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
@@ -115,7 +103,7 @@ timeout 0
 # Note that to close the connection the double of the time is needed.
 # On other kernels the period depends on the kernel configuration.
 #
-# A reasonable value for this option is 300 seconds, which is the new	
+# A reasonable value for this option is 300 seconds, which is the new
 # Redis default starting with Redis 3.2.1.
 tcp-keepalive 60
 
@@ -245,7 +233,7 @@ dbfilename dump.rdb
 #
 # This has to be an existing path to a writable directory.
 # Trove will override this property based on the underlying OS.
-dir /var/lib/redis
+dir /tmp
 
 ################################# REPLICATION #################################
 
@@ -436,34 +424,33 @@ slave-priority 100
 # By default min-slaves-to-write is set to 0 (feature disabled) and
 # min-slaves-max-lag is set to 10.
 
-		
-# A Redis master is able to list the address and port of the attached	
-# slaves in different ways. For example the "INFO replication" section	
-# offers this information, which is used, among other tools, by	
-# Redis Sentinel in order to discover slave instances.	
-# Another place where this info is available is in the output of the	
-# "ROLE" command of a masteer.	
-#	
-# The listed IP and address normally reported by a slave is obtained	
-# in the following way:	
-#	
-#   IP: The address is auto detected by checking the peer address	
-#   of the socket used by the slave to connect with the master.	
-#	
-#   Port: The port is communicated by the slave during the replication	
-#   handshake, and is normally the port that the slave is using to	
-#   list for connections.	
-#	
-# However when port forwarding or Network Address Translation (NAT) is	
-# used, the slave may be actually reachable via different IP and port	
-# pairs. The following two options can be used by a slave in order to	
-# report to its master a specific set of IP and port, so that both INFO	
-# and ROLE will report those values.	
-#	
-# There is no need to use both the options if you need to override just	
-# the port or the IP address.	
-#	
-# slave-announce-ip 5.5.5.5	
+# A Redis master is able to list the address and port of the attached
+# slaves in different ways. For example the "INFO replication" section
+# offers this information, which is used, among other tools, by
+# Redis Sentinel in order to discover slave instances.
+# Another place where this info is available is in the output of the
+# "ROLE" command of a master.
+#
+# The listed IP and address normally reported by a slave is obtained
+# in the following way:
+#
+#   IP: The address is auto detected by checking the peer address
+#   of the socket used by the slave to connect with the master.
+#
+#   Port: The port is communicated by the slave during the replication
+#   handshake, and is normally the port that the slave is using to
+#   list for connections.
+#
+# However when port forwarding or Network Address Translation (NAT) is
+# used, the slave may be actually reachable via different IP and port
+# pairs. The following two options can be used by a slave in order to
+# report to its master a specific set of IP and port, so that both INFO
+# and ROLE will report those values.
+#
+# There is no need to use both the options if you need to override just
+# the port or the IP address.
+#
+# slave-announce-ip 5.5.5.5
 # slave-announce-port 1234
 
 ################################## SECURITY ###################################
